--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -8,8 +9,12 @@ html {
 }
 
 body {
+    background-color: $body-background-color;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $base-font-size;
+    color: $body-default-color;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
@@ -27,7 +32,7 @@ p {
 }
 
 a {
-    color: black;
+    color: $body-default-color;
 }
 
 input[type=text], input[type=email], input[type=password] {
