--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
     background-color: $body-background-color;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: $body-default-font-family;
     font-size: $base-font-size;
     color: $body-default-color;
     margin: 0;
@@ -35,9 +35,11 @@ a {
     color: $body-default-color;
 }
 
-input[type=text], input[type=email], input[type=password] {
+input[type=text], input[type=email], input[type=password], textarea {
     border: 1px solid $input-border;
+    font-family: $body-default-font-family;
     font-size: $base-font-size;
+    color: $body-default-color;
     margin-bottom: $space;
-    padding: 0.4rem;
+    padding: $input-spacing;
 }
