Style note list

--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -41,9 +41,7 @@ $header-text-color: white;
 $header-height: 6rem;
 
 // Item
-$item-bg: $light-gray;
-$item-border: darken($item-bg, 10%);
-$item-text-color: $dark-gray;
+$item-boredr-width: 4px;
 
 // Page Content
 $page-content-sidebar-width: 30rem;
