--- a/imports/client/styles/components/_header.scss
+++ b/imports/client/styles/components/_header.scss
@@ -5,6 +5,7 @@
 
 .header__content {
     display: flex;
+    align-items: center;
     height: $header-height;
     justify-content: space-between;
     max-width: $site-max-width;
@@ -14,4 +15,14 @@
 
 .header__title {
     margin: 0;
+}
+
+.header__nav-toggle {
+    cursor: pointer;
+    height: 2rem;
+    width: 2rem;
+
+    @include desctop {
+        display: none;
+    }
 }
